--- a/FullTextSearchQuery/FullTextSearchQuery.csproj
+++ b/FullTextSearchQuery/FullTextSearchQuery.csproj
@@ -24,7 +24,9 @@ This package was created based on SoftCircuits.FullTextSearchQuery library to be
     <RepositoryUrl>https://github.com/SkuVault/FullTextSearchQuery</RepositoryUrl>
     <PackageIcon>Logo_64x64.png</PackageIcon>
     <PackageIconUrl />
-    <PackageVersion>1.0.2</PackageVersion>
+    <PackageVersion>1.0.3</PackageVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
